# pbitool

./: .gitignore  PBIXAnalyzer.cs  PBIXAnalyzer.csproj  Program.cs  README.md  packages.config  pbitool.csproj  pbitool.sln  pyproject.toml  requirements.txt
src/pbix_analyzer/: analyzer.py
tests/: test_analyzer.py
