[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# setup.cfg
[metadata]
name = pbix_analyzer
version = 0.1.0
description = A tool for analyzing Power BI (PBIX) files
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    zipfile36>=0.0.4

[options.packages.find]
where = src
